# rotel

./: .dockerignore  .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  DEVELOPING.md  Dockerfile  Dockerfile.build  Dockerfile.build-python  Dockerfile.clickhouse-ddl  Dockerfile.context-processor  Dockerfile.full  Dockerfile.python-processor  KAFKA_INTEGRATION_TESTS.md  README.md  RELEASING.md  build.rs  docker-compose.kafka-test.yml
.cargo/: config.toml
.github/workflows/: auto-release.yml  ci.yml  docker-release.yml  features-test.yml  processor-release.yml  release.yml  rotel-sdk-release.yml
benches/: clone_trace_request_bench.rs  encode_otlp_trace_bench.rs  flume_bench.rs  transform_attrs_bench.rs
benchmark/otel-collector/: collector-config.yaml
benchmark/otel-collector/otelcol-benchmark/: go.mod  go.sum  main.go
contrib/clickhouse/: schema-migrate.sh
contrib/processor/tests/: read_and_write_attributes_array_value_test.py  read_and_write_attributes_key_value_list_test.py  read_and_write_instrumentation_scope_test.py  read_and_write_spans_test.py  read_key_value_key_test.py  read_key_value_value_test.py  read_resource_attributes_test.py  read_value_test.py  resource_attributes_append_attribute.py  resource_attributes_set_attributes.py  resource_logs_append_attribute.py  resource_spans_append_attribute.py  resource_spans_iterate_spans.py  set_instrumentation_scope_test.py  traces_delitem_test.py  write_bool_value_test.py  write_key_value_bytes_value_test.py  write_key_value_key_test.py  write_key_value_value_test.py  write_resource_attributes_key_value_key_test.py  write_resource_attributes_key_value_value_test.py  write_scope_spans_test.py  write_span_events_test.py  (+2 more)
otel_benchmark_builder/otel-collector/: Makefile  build.sh  builder-config.yaml
proto/datadog/: agent_payload.proto  span.proto  stats.proto  tracer_payload.proto
rotel_python_processor_sdk/: Cargo.toml  pyproject-dist.toml  pyproject.toml
rotel_python_processor_sdk/processors/: attributes_processor.py  context_processor.py  genai_redaction_processor.py  redaction_processor.py
rotel_python_processor_sdk/python_tests/: add_log_record_test.py  attributes_processor_test.py  context_processor_test.py  genai_redaction_processor_test.py  read_and_write_attributes_key_value_list_test.py  read_and_write_instrumentation_scope_test.py  read_and_write_logs_test.py  read_and_write_metrics_test.py  read_and_write_resource_entities_test.py  read_and_write_spans_test.py  read_key_value_key_test.py  read_key_value_value_test.py  read_value_test.py  redaction_processor_blocking_test.py  redaction_processor_log_body_test.py  redaction_processor_restrictive_test.py  redaction_processor_test.py  remove_log_record_test.py  resource_attributes_set_attributes.py  resource_spans_append_attribute.py  set_scope_spans_span_test.py  write_bytes_value_test.py  write_key_value_value_test.py  write_resource_attributes_key_value_key_test.py  write_resource_attributes_key_value_value_test.py  write_resource_spans_resource_test.py  write_span_events_test.py  write_string_value_test.py
rotel_python_processor_sdk/rotel_sdk/: README.md  __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/: __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/common/: __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/common/v1/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/logs/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/logs/v1/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/metrics/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/metrics/v1/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/request/: __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/resource/: __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/resource/v1/: __init__.pyi
rotel_python_processor_sdk/rotel_sdk/open_telemetry/trace/: __init__.py
rotel_python_processor_sdk/rotel_sdk/open_telemetry/trace/v1/: __init__.pyi
rotel_python_processor_sdk/src/model/: common.rs  logs.rs  metrics.rs  mod.rs  otel_transform.rs  py_transform.rs  resource.rs  trace.rs
rotel_python_processor_sdk/src/py/: common.rs  logs.rs  metrics.rs  mod.rs  request_context.rs  resource.rs  trace.rs
rotel_rust_processor_sdk/: Cargo.toml  README.md
rotel_rust_processor_sdk/src/: convert.rs  lib.rs  processor.rs
rotel_rust_processor_sdk/src/types/: common.rs  context.rs  logs.rs  metrics.rs  mod.rs  traces.rs
scripts/: benchmark-file-receiver.sh  kafka-test-env.sh  kmsg-test-env.sh  measure-latency.sh  nginx-log-generator.sh  verify-file-receiver.sh
src/: bounded_channel.rs  crypto.rs  lib.rs  listener.rs
src/aws_api/: arn.rs  auth.rs  client.rs  config.rs  creds.rs  error.rs  host.rs  mod.rs  paramstore.rs  secretsmanager.rs
src/exporters/: blackhole.rs  crypto_init_tests.rs  mod.rs  retry.rs
src/init/: activation.rs  agent.rs  args.rs  awsemf_exporter.rs  batch.rs  clickhouse_exporter.rs  config.rs  datadog_exporter.rs  file_exporter.rs  file_receiver.rs  fluent_receiver.rs  kafka_exporter.rs  kafka_receiver.rs  kmsg_receiver.rs  misc.rs  mod.rs  otlp_exporter.rs  otlp_receiver.rs  parquet_exporter.rs  parse.rs  redis_stream_exporter.rs  retry.rs  wait.rs  xray_exporter.rs
src/lambda/: api.rs  telemetry_api.rs
src/otlp/: cvattr.rs  mod.rs
src/ottl/: kql_test.rs  mod.rs
src/processor/: mod.rs
src/receivers/: mod.rs  otlp_grpc.rs  otlp_http.rs  otlp_output.rs
src/semconv/: cloud.rs  containers.rs  db_system.rs  misc.rs  mod.rs
src/telemetry/: internal_exporter.rs  metrics_server.rs  mod.rs
src/topology/: batch.rs  batch_resources.rs  debug.rs  fanout.rs  flush_control.rs  generic_pipeline.rs  mod.rs  payload.rs  pipeline.rs  processors.rs
test/scripts/: duckdb_load.sql  send_otlp_http.sh
tests/: kafka_integration_tests.rs  kmsg_integration_tests.rs  rust_processor_integration_tests.rs
tests/integration/: kafka_integration_tests.rs
utilities/: Cargo.toml
utilities/src/: otlp.rs
(+189 files in other folders)
