[package]
name = "rotel"
version = "0.1.9"
edition = "2024"
homepage = "https://github.com/streamfold/rotel"
readme = "README.md"
rust-version = "1.91"
default-run = "rotel"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-appender = "0.2.3"
tonic = { version = "0.14", features = ["gzip"] }
# Using git revision that includes 32-bit ARM AtomicU64 fix (commit 0948c61)
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "0948c61" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "0948c61" }
opentelemetry-proto = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "0948c61" }
flume = { version = "0.11.1", features = ["async"] }
http-body-util = "0.1.2"
http = "1.2.0"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
prost = "0.14"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
futures = "0.3.31"
daemonize = { git = "https://github.com/mheffner/daemonize", branch = "passy-pr54" }
humantime = "2.1.0"
rand = "0.8.5"
bytes = "1.11.1"
read-restrict = "0.3.0"
tower = { version = "0.5.2", features = ["retry", "timeout"] }
tower-http = { version = "0.6.2", features = [
    "limit",
    "trace",
    "compression-gzip",
    "validate-request",
] }
url = "2.5.4"
hyper-rustls = { version = "0.27.5", features = ["http2"] }
rustls = "0.23.20"
rustls-pki-types = "1.10.0"
pprof = { version = "0.14.0", features = [
    "flamegraph",
    "prost",
    "prost-codec",
], optional = true }
num_cpus = "1.16.0"
hex = "0.4.3"
serde_json = "1.0.135"
opentelemetry-semantic-conventions = { version = "0.29.0", features = [
    "semconv_experimental",
] }
gethostname = "0.5.0"
glob = { version = "0.3.1", optional = true }
notify = { version = "8.0", optional = true }
notify-debouncer-mini = { version = "0.7", optional = true }
libc = "0.2.170"
pin-project = "1.1.10"
futures-util = "0.3.31"
rotel_python_processor_sdk = { path = "rotel_python_processor_sdk", optional = true }
pyo3 = { version = "0.27.2", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"] }
cityhash-rs = "1.0.1"
bstr = "1.12.0"
indexmap = "2.9.0"
hmac = "0.12"
sha2 = "0.10"
regex = "1.11.1"
rdkafka = { version = "0.38", features = [
    "tokio",
    "libz-static",
    "ssl-vendored",
    "zstd",
    "cmake-build",
], optional = true }
figment = { version = "0.10.19", default-features = false, features = ["env"] }
parquet = { version = "55.1.0", optional = true }
arrow = { version = "55.1.0", optional = true }
base64 = "0.22.1"
wildcard = "0.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
aws-config = { version = "1.8.6", optional = true }
aws-credential-types = { version = "1.2.6", optional = true }
# Use a custom branch that backdates to otel sdk 0.30.0 (we are not compatible with 0.31.0 yet). Also sort data points + attributes for visual stability
opentelemetry-prometheus-text-exporter = { git = "https://github.com/mheffner/opentelemetry-prometheus-text-exporter", branch = "sorted-otel-0.30.0", optional = true }
# Making utilities available to the generate-otlp binary
utilities = { path = "utilities" }
humantime-serde = "1.1.1"

[dev-dependencies]
tokio-test = "0.4.4"
httpmock = "0.7.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tracing-test = "0.2.5"
tempfile = "3.19.1"
rdkafka = { version = "0.38", features = [
    "tokio",
    "libz-static",
    "ssl-vendored",
    "zstd",
    "cmake-build",
] }
tonic = { version = "0.14", features = [
    "gzip",
    "tls-aws-lc",
] } # TLS used to test exporter TLS

[build-dependencies]
prost-build = "0.14"

# portable-atomic provides AtomicU64 on 32-bit platforms lacking native 64-bit atomics
[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }

[features]
default = ["rdkafka", "aws_iam", "file_receiver"]
fluent_receiver = ["dep:rmpv", "dep:rmp-serde"]
file_receiver = ["dep:glob", "dep:notify", "dep:notify-debouncer-mini"]
kmsg_receiver = []
pprof = ["dep:pprof"]
pyo3 = ["dep:pyo3", "dep:rotel_python_processor_sdk"]
rdkafka = ["dep:rdkafka"]
file_exporter = ["dep:parquet", "dep:arrow"]
aws_iam = ["dep:aws-config", "dep:aws-credential-types"]
prometheus = ["dep:opentelemetry-prometheus-text-exporter"]

integration-tests = []


[[bench]]
name = "flume_bench"
harness = false

[[bench]]
name = "clone_trace_request_bench"
harness = false

[[bench]]
name = "encode_otlp_trace_bench"
harness = false

[[bin]]
name = "rotel"

[[bin]]
name = "generate-otlp"
path = "src/bin/generate-otlp/main.rs"

[profile.release]
lto = "fat"
