[package]
name = "rotel_rust_processor_sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Rust-based processors for Rotel"
license = "Apache-2.0"

[dependencies]
abi_stable = "0.11"
opentelemetry-proto = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "0948c61" }
tokio = { version = "1", features = ["rt"] }

[lib]
crate-type = ["rlib"]
